cluster-monitoring/gcp-grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-dns-issuer"
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.<CLUSTER_DOMAIN>
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /
  tls:
  - hosts:
    - grafana.<CLUSTER_DOMAIN>
    secretName: grafana-certs
