cluster-monitoring/iks-grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.bluemix.net/client-max-body-size: size=100m
    ingress.bluemix.net/redirect-to-https: "True"
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.<CLUSTER_DOMAIN>
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /
  tls:
  - hosts:
    - grafana.<CLUSTER_DOMAIN>
    secretName: acceptance
